# mccoy

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  TASKS.md  app.py  auth.py  claude.md  db.py  main.py  prd.md  pyproject.toml  snapshot.py  spotify.py
assets/: manifest.json  rustle.js  style.css
components/: about.py  artist_grid.py  genre_chart.py  header.py  rustle.py  trends.py
migrations/: 001_initial.sql  002_recent_searches.sql
scripts/: make_icons.py
tests/: conftest.py  test_about.py  test_app.py  test_auth.py  test_components.py  test_db.py  test_integration.py  test_rustle.py  test_snapshot.py  test_spotify.py  test_trends.py
